--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dom": "^0.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4",
     "router": "^2.2.0",
     "tailwindcss": "^4.1.14"
   },
